@@ -126,6 +126,9 @@ allprojects {
             dependsOn(':installGitHooks')
             sourceCompatibility = 8
             targetCompatibility = 8
+            // Because the target is 8, all of the public compiler classes are accessible, so
+            // --add-exports are not required, (nor are they allowed with target 8). See
+            // https://openjdk.java.net/jeps/247 for details on compiling for older versions.
 
             // When sourceCompatibilty is changed to 11, then the following will be required.
             // options.compilerArgs += [
@@ -139,6 +142,20 @@ allprojects {
             // "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
             // "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
             // ]
+            // This is equivalent to writing "exports jdk.compiler/... to ALL-UNNAMED" in the
+            // module-info.java of jdk.compiler, so corresponding --add-opens are only required for
+            // reflective access to private members.
+            //
+            // From https://openjdk.java.net/jeps/261, Section titled: "Breaking encapsulation"
+            // "The effect of each instance [of --add-exports] is to add a qualified export of the
+            // named package from the source module to the target module. This is, essentially, a
+            // command-line form of an exports clause in a module declaration[...].
+            // [...]
+            // The --add-exports option enables access to the public types of a specified package.
+            // It is sometimes necessary to go further and enable access to all non-public elements
+            // via the setAccessible method of the core reflection API. The --add-opens option can
+            // be used, at run time, to do this."
+
             options.failOnError = true
             options.deprecation = true
             options.compilerArgs += [
